# hacking-capital

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  demo_flow.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  raindrop.yml  requirements.txt  run_batch_summaries.py  test_trading_demo.py
app/: main.py
app/agents/: base.py  ensemble.py  primary_agent.py  registry.py
app/api/: deps.py
app/cache/: keys.py  redis_cache.py
app/core/: cache.py  logging.py  scheduler.py  settings.py
app/db/: base.py  models.py
app/repositories/: agent_repo.py  agent_summary_repo.py  decision_repo.py  portfolio_repo.py  price_repo.py  summary_repo.py  trade_repo.py  vector_repo.py
app/schemas/: agent.py  market.py  summary.py  trade.py
app/services/: backtest_service.py  data_service.py  metrics.py  paper_trade_service.py  portfolio_optimizer.py  simulation_service.py  summary_service.py  technical_indicators.py  trading_service.py
app/vectorstore/: base.py  sqlite_json.py
tests/: conftest.py
tests/integration/: test_api_routes.py  test_end_to_end_backtest.py  test_paper_trade_stream.py  test_sse_events.py  test_trade_persistence.py
tests/unit/: test_agent_ensemble.py  test_cache_fallback.py  test_data_service.py  test_metrics.py  test_repositories.py  test_summary_service.py  test_trading_service.py
ui/: App.py  api_client.py  state.py
ui/pages/: 1_Dashboard.py  2_Backtest.py  3_Summaries.py  4_Trades_and_Confidence.py  5_Paper_Trade_Live.py  6_Portfolio_Optimization.py  7_Trading_History.py
(+17 files in other folders)
