[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hacking-capital"
version = "0.1.0"
description = "LLM-free Python agent scaffold for deterministic trading experiments (FastAPI + Streamlit)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "redis>=5.0.4",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.38.0",
  "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-redis",
  "types-requests",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]


